--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,9 @@ jobs:
   build-and-deploy-react-client:
     environment: development
     runs-on: ubuntu-latest
+    defaults:
+        run:
+            working-directory: client
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
