--- a/GobGuides/appsettings.Development.json
+++ b/GobGuides/appsettings.Development.json
@@ -2,8 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Debug"
     }
   },
-  "SQLiteDbConnString": "Data Source=gob_guides_dev.db"
+  "SQLiteDbConnString": "Data Source=gob_guides_dev.db",
+  "ClientAppOrigin": "http://localhost:5173"
 }
