--- a/GobGuides/appsettings.Development.json
+++ b/GobGuides/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Debug"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "SQLiteDbConnString": "Data Source=gob_guides_dev.db",
