--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "client": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "sass": "^1.84.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
